syntax = "proto3";

option go_package = "./pb";
package pb;

message AddCurriculaRequest{
  uint32 CurriculaId = 1;
  string CurriculaName = 2;
  string Teacher = 3;
  uint32 Type = 4;
}

message AddCurriculaResponse{
}

service curriculacenter{
  rpc addCurricula(AddCurriculaRequest)returns(AddCurriculaResponse);
}